[gd_scene load_steps=3 format=3 uid="uid://bxc5r6hxq4tjo"]

[ext_resource type="Script" path="res://ui/system/save_dialog.gd" id="1_u2bjh"]
[ext_resource type="PackedScene" uid="uid://dko1560jvly1k" path="res://ui/system/save_games_list.tscn" id="2_prgj7"]

[node name="SaveDialog" type="Control"]
layout_mode = 3
anchor_right = 0.283
anchor_bottom = 0.872
offset_right = 0.319977
offset_bottom = 0.119965
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_u2bjh")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_right = 268.0
offset_bottom = 388.0

[node name="MainContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="NewGameContainer" type="HBoxContainer" parent="PanelContainer/MainContainer"]
layout_mode = 2

[node name="SaveGameName" type="LineEdit" parent="PanelContainer/MainContainer/NewGameContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "New game name"

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/MainContainer"]
custom_minimum_size = Vector2(0, 400)
layout_mode = 2
horizontal_scroll_mode = 0

[node name="SaveGames" parent="PanelContainer/MainContainer/ScrollContainer" instance=ExtResource("2_prgj7")]
layout_mode = 2

[node name="ButtonsContainer" type="HBoxContainer" parent="PanelContainer/MainContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="SaveButton" type="Button" parent="PanelContainer/MainContainer/ButtonsContainer"]
layout_mode = 2
text = "Save
"

[node name="DeleteButton" type="Button" parent="PanelContainer/MainContainer/ButtonsContainer"]
layout_mode = 2
text = "Delete"

[node name="CancelButton" type="Button" parent="PanelContainer/MainContainer/ButtonsContainer"]
layout_mode = 2
text = "Cancel"

[connection signal="text_submitted" from="PanelContainer/MainContainer/NewGameContainer/SaveGameName" to="." method="_on_save_game_name_text_submitted"]
[connection signal="savegame_selected" from="PanelContainer/MainContainer/ScrollContainer/SaveGames" to="." method="_on_savegame_selected"]
[connection signal="pressed" from="PanelContainer/MainContainer/ButtonsContainer/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="PanelContainer/MainContainer/ButtonsContainer/CancelButton" to="." method="_on_cancel_button_pressed"]
